--- a/content/news/posts/67651bc382e67f5a85ef24b5.md
+++ b/content/news/posts/67651bc382e67f5a85ef24b5.md
@@ -1,9 +1,9 @@
 ---
 layout: partials/news/Post
-image: /assets/img/news/posts/InvestingRevault.jpeg
-url: https://www.investing.com/news/cryptocurrency-news/revault-leverages-orbs-unique-l3-enhance-security-and-decentralization-2774782
-date: 1, March 2022
-logo: /assets/img/news/logos/investing.webp
+image: /assets/img/news/posts/67651bc382e67f5a85ef24b5.jpeg
+url: https://coinmarketcap.com/community/articles/67651bc382e67f5a85ef24b5/
+date: 20, December 2024
+logo: /assets/img/news/logos/coinmarketcap.png
 ---
 
-Revault Leverages Orbs’ Unique L3 Enhance Security and Decentralization
+Orbs Introduces Liquidity Hub V2 to Set a New Standard for DEX Liquidity
