--- a/content/news/posts/67ab3a7374275a185aa0a8e9.md
+++ b/content/news/posts/67ab3a7374275a185aa0a8e9.md
@@ -1,9 +1,9 @@
 ---
 layout: partials/news/Post
-image: /assets/img/news/posts/InvestingRevault.jpeg
-url: https://www.investing.com/news/cryptocurrency-news/revault-leverages-orbs-unique-l3-enhance-security-and-decentralization-2774782
-date: 1, March 2022
-logo: /assets/img/news/logos/investing.webp
+image: /assets/img/news/posts/67ab3a7374275a185aa0a8e9.jpg
+url: https://coinmarketcap.com/community/articles/67ab3a7374275a185aa0a8e9/
+date: 11, February 2025
+logo: /assets/img/news/logos/coinmarketcap.png
 ---
 
-Revault Leverages Orbs’ Unique L3 Enhance Security and Decentralization
+Orbs Liquidity Hub Expands to Sonic Following SpookySwap Integration
