--- a/content/news/posts/20164393529409.md
+++ b/content/news/posts/20164393529409.md
@@ -1,9 +1,9 @@
 ---
 layout: partials/news/Post
-image: /assets/img/news/posts/InvestingRevault.jpeg
-url: https://www.investing.com/news/cryptocurrency-news/revault-leverages-orbs-unique-l3-enhance-security-and-decentralization-2774782
-date: 1, March 2022
-logo: /assets/img/news/logos/investing.webp
+image: /assets/img/news/posts/20164393529409.jpg
+url: https://www.binance.com/en/square/post/20164393529409
+date: 11, February 2025
+logo: /assets/img/news/logos/binance.png
 ---
 
-Revault Leverages Orbs’ Unique L3 Enhance Security and Decentralization
+Orbs Liquidity Hub Expands to Sonic Following SpookySwap Integration
