--- a/content/news/posts/680a04838443642a5150c813.md
+++ b/content/news/posts/680a04838443642a5150c813.md
@@ -1,9 +1,9 @@
 ---
 layout: partials/news/Post
-image: /assets/img/news/posts/InvestingRevault.jpeg
-url: https://www.investing.com/news/cryptocurrency-news/revault-leverages-orbs-unique-l3-enhance-security-and-decentralization-2774782
-date: 1, March 2022
-logo: /assets/img/news/logos/investing.webp
+image: /assets/img/news/posts/680a04838443642a5150c813.jpg
+url: https://coinmarketcap.com/community/articles/680a04838443642a5150c813/
+date: 24, April 2025
+logo: /assets/img/news/logos/coinmarketcap.png
 ---
 
-Revault Leverages Orbs’ Unique L3 Enhance Security and Decentralization
+SwapX Integrates Orbs’ dLIMIT and dTWAP for Decentralized Swaps on Sonic
