--- a/content/news/posts/685a6b5ddfdfeb3fb1f81917.md
+++ b/content/news/posts/685a6b5ddfdfeb3fb1f81917.md
@@ -1,9 +1,9 @@
 ---
 layout: partials/news/Post
-image: /assets/img/news/posts/InvestingRevault.jpeg
-url: https://www.investing.com/news/cryptocurrency-news/revault-leverages-orbs-unique-l3-enhance-security-and-decentralization-2774782
-date: 1, March 2022
-logo: /assets/img/news/logos/investing.webp
+image: /assets/img/news/posts/685a6b5ddfdfeb3fb1f81917.jpeg
+url: https://coinmarketcap.com/community/articles/685a6b5ddfdfeb3fb1f81917/
+date: 24, June 2025
+logo: /assets/img/news/logos/coinmarketcap.png
 ---
 
-Revault Leverages Orbs’ Unique L3 Enhance Security and Decentralization
+Orbs Perpetual Hub Integrates With PriveX to Support Privacy-First Perps Trading on COTI
