--- a/content/news/posts/20164393529409.md
+++ b/content/news/posts/20164393529409.md
@@ -1,9 +1,9 @@
 ---
 layout: partials/news/Post
 image: /assets/img/news/posts/25733316042977.jpg
-url: https://www.binance.com/en/square/post/25733316042977
-date: 17, June 2025
+url: https://www.binance.com/en/square/post/20164393529409
+date: 11, February 2025
 logo: /assets/img/news/logos/binance.png
 ---
 
-ArbiDex and BaseSwap Relaunch DLimit and DTWAP Orders Powered By Orbs
+Orbs Liquidity Hub Expands to Sonic Following SpookySwap Integration
